Build scripts for a bower distributable version (minified and bundled)

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
     <title>Sample page</title>
-    <script type="text/javascript" src="trischwartz.js" charset="utf-8"></script>
+    <script type="text/javascript" src="../dist/trischwartz.min.js" charset="utf-8"></script>
 </head>
 <body>
 <h1>A web page</h1>
 <script>
-    // TODO: Incorporate script into page
+    console.log('Generating triangles:', generateTriangle(60,60,60));
 </script>
 </body>
 
