--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,7 @@
 
 <svg width=100 height=100 viewBox="0 0 1 1" preserveAspectRatio="true">
     <rect height="1" width="1" stroke-width="0.05" fill="transparent" stroke="#CCCCCC"></rect>
-    <polygon points="0,0 1,0 0.5,0.866" stroke="green" stroke-width=".1" fill="transparent" transform="rotate(180 0.5 0.5)"></polygon>
+    <polygon points="0,0 1,0 0.5,0.866" stroke="green" stroke-width=".1" fill="transparent" transform="rotate(180 0.5 0.5) scale(0.75 0.75) translate(0.125 0.125)"></polygon>
 </svg>
 
 <script>
