--- a/demo/index.html
+++ b/demo/index.html
@@ -6,13 +6,14 @@
 <body>
 <h1>A web page</h1>
 
-<svg width=100 height=100 viewBox="0 0 1 1" preserveAspectRatio="true">
+<svg width=100 height=100 viewBox="-2 -2 4 4" preserveAspectRatio="xMinYMin">
     <rect height="1" width="1" stroke-width="0.05" fill="transparent" stroke="#CCCCCC"></rect>
-    <polygon points="0,0 1,0 0.5,0.866" stroke="green" stroke-width=".1" fill="transparent" transform="rotate(180 0.5 0.5) scale(0.75 0.75) translate(0.125 0.125)"></polygon>
+    <polygon points="0,0 1,0 -0.5, 0.866" stroke="green" stroke-width=".05" fill="transparent" transform="rotate(180 0.5 0.5) scale(0.75 0.75) translate(0.125 0.125)"></polygon>
+    <polygon points="0.333,0.000 1,0 0,.577" stroke="red" stroke-width=".05" fill="transparent" transform="rotate(180 0.5 0.5) scale(0.75 0.75) translate(0.125 0.125)"></polygon>
 </svg>
 
 <script>
-    console.log('Generating triangles:', generateCoords(60,60,60));
+    //console.log('Generating triangles:', generateCoords(60,60,60));
 </script>
 
 
