--- a/demo/index.html
+++ b/demo/index.html
@@ -6,14 +6,20 @@
 <body>
 <h1>A web page</h1>
 
-<svg width=100 height=100 viewBox="-2 -2 4 4" preserveAspectRatio="xMinYMin">
-    <rect height="1" width="1" stroke-width="0.05" fill="transparent" stroke="#CCCCCC"></rect>
-    <polygon points="0,0 1,0 -0.5, 0.866" stroke="green" stroke-width=".05" fill="transparent" transform="rotate(180 0.5 0.5) scale(0.75 0.75) translate(0.125 0.125)"></polygon>
-    <polygon points="0.333,0.000 1,0 0,.577" stroke="red" stroke-width=".05" fill="transparent" transform="rotate(180 0.5 0.5) scale(0.75 0.75) translate(0.125 0.125)"></polygon>
+<svg width=400 height=400 viewBox="-1 -1 2 2" preserveAspectRatio="xMinYMin">
+    <rect height="2" width="2" x=-1 y=-1 stroke-width="0.05" fill="transparent" stroke="#CCCCCC"></rect>
+    <polygon points="0.333,0.000 1,0 0,.577" stroke="red" stroke-width=".05" fill="transparent" transform="rotate(180 0.5 0.5)"></polygon>
 </svg>
+
+
+<div id="mybox"></div>
 
 <script>
     //console.log('Generating triangles:', generateCoords(60,60,60));
+    var container = document.getElementById('mybox');
+    var coords = generateCoords(60, 60, 60);
+    drawTriangle(container, coords);
+
 </script>
 
 
