--- a/demo/index.html
+++ b/demo/index.html
@@ -13,13 +13,14 @@
     }
 </style>
 <body>
-<h1>A web page</h1>
+<h1>Triangle SVG Demo</h1>
 
 <div id="mybox" class="svg-container"></div>
 
 <script>
     var container = document.getElementById('mybox');
     var coords = generateCoords(60, 60, 60);
+    coords = scaleCoords(coords);
 
     var svg = createSvgContainer({width: '100%', height: '100%'});
     var triangle = constructPolygon(coords, {'stroke-width': .02});
@@ -28,7 +29,6 @@
     svg.appendChild(rect);
 
     container.appendChild(svg);
-
 </script>
 
 </body>
