--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Sample page</title>
-    <script type="text/javascript" src="../dist/trischwartz.min.js" charset="utf-8"></script>
 </head>
 
 <style>
@@ -17,19 +16,7 @@
 
 <div id="mybox" class="svg-container"></div>
 
-<script>
-    var container = document.getElementById('mybox');
-    var coords = generateCoords(60, 60, 60);
-    coords = scaleCoords(coords);
-
-    var svg = createSvgContainer({width: '100%', height: '100%'});
-    var triangle = constructPolygon(coords, {'stroke-width': .02});
-    var rect = constructRect();
-    svg.appendChild(triangle);
-    svg.appendChild(rect);
-
-    container.appendChild(svg);
-</script>
+<script type="text/javascript" src="bundle.js" charset="utf-8"></script>
 
 </body>
 
